[package]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "button-role-bot"
version = "0.1.0"

[dependencies]
anyhow = "1.0.41"
dotenv = "0.15.0"
etcetera = "0.3.2"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
serenity = {version = "0.10.8", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "unstable_discord_api"]}
tokio = {version = "1.8.0", features = ["full"]}
